# anp-miniapp-dock

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/anp-adapter/: Cargo.toml
crates/anp-adapter/src/: challenge.rs  did.rs  lib.rs  signed_request.rs  token.rs
crates/anp-adapter/tests/: capability_token_scope.rs
crates/card-spec/: Cargo.toml
crates/card-spec/src/: actions.rs  fallback.rs  lib.rs  schema.rs
crates/card-spec/tests/: order_card.rs
crates/component-runtime/: Cargo.toml
crates/component-runtime/src/: compiler.rs  component_vm.rs  events.rs  lib.rs  loader.rs  render_ir.rs  wxml.rs  wxss.rs
crates/component-runtime/tests/: component_lifecycle.rs  set_data.rs  wxml_bindings.rs
crates/consent-audit/: Cargo.toml
crates/consent-audit/src/: audit.rs  consent.rs  lib.rs
crates/consent-audit/tests/: payment_requires_consent.rs
crates/demo-server/: Cargo.toml
crates/demo-server/src/: audit.rs  auth.rs  coffee.rs  lib.rs  main.rs  routes.rs
crates/demo-server/tests/: demo_api.rs
crates/dock-cli/: Cargo.toml
crates/dock-cli/src/: commands.rs  lib.rs  main.rs
crates/dock-cli/tests/: coffee_order_flow.rs
crates/dock-core/: Cargo.toml
crates/dock-core/src/: api_registry.rs  error.rs  host.rs  lib.rs  orchestrator.rs
crates/dock-core/tests/: api_call_flow.rs
crates/js-runtime-quickjs/: Cargo.toml
crates/js-runtime-quickjs/src/: api_vm.rs  bridge.rs  commonjs.rs  lib.rs  middleware.rs
crates/js-runtime-quickjs/tests/: middleware_chain.rs  register_api.rs
crates/mcp-schema/: Cargo.toml
crates/mcp-schema/src/: lib.rs  manifest.rs  result.rs  validation.rs
crates/mcp-schema/tests/: mcp_validation.rs
crates/skill-loader/: Cargo.toml
crates/skill-loader/src/: lib.rs  package.rs  resolver.rs
crates/skill-loader/tests/: coffee_skill_load.rs
crates/wx-compat/: Cargo.toml
crates/wx-compat/src/: lib.rs  model_context.rs  permissions.rs  request.rs  storage.rs
crates/wx-compat/tests/: component_permissions.rs  scoped_storage.rs
docs/architecture/: agentic-miniapp-container-prd.md  anp-skill-dock-architecture.md  miniapp-mcp-compatibility-mvp.md  miniapp-mcp-component-runtime.md
docs/plan/: did-wx-python-integration-plan.md  production-readiness-roadmap.md
docs/plan/production-readiness/: README.md  phase-0-baseline-and-gates.md  phase-1-did-request-session-manager.md  phase-1-wx-api-bridge-contract.md  phase-1-wx-capability-broker.md  phase-2-component-runtime-alignment.md  phase-2-render-ir-and-fixtures.md  phase-3-security-hardening.md  phase-3-threat-model-and-controls.md  phase-4-runtime-host-integration.md  phase-5-developer-experience.md  phase-6-observability-release.md
docs/ppt/: README.md  anp-miniapp-dock-sharing-outline.md  anp-miniapp-dock-sharing-script.md  build_anp_miniapp_dock_deck.py  image-assets.md  index.html  requirements.txt  source-notes.md
docs/runbook/: local-demo.md  security.md
docs/weichat-miniapp-mcp-protocol/: weichat-miniapp-mcp.txt
examples/coffee-fastapi-server/: README.md  app.py  auth.py  requirements.txt
examples/coffee-skill/: SKILL.md  index.js  mcp.json
examples/coffee-skill/apis/: confirmOrder.js  payOrder.js  searchDrinks.js
examples/coffee-skill/components/drink-list/: index.js  index.wxml  index.wxss
examples/coffee-skill/components/order-confirm/: index.js  index.wxml  index.wxss
examples/coffee-skill/components/payment-result/: index.js  index.wxml  index.wxss
examples/identity/: README.md  did_document.json  key-1-private.pem
mac-app/AnpMiniappDockMac/: Package.swift  README.md
mac-app/AnpMiniappDockMac/AnpMiniappDockMac.xcodeproj/: project.pbxproj
mac-app/AnpMiniappDockMac/AnpMiniappDockMac.xcodeproj/xcshareddata/xcschemes/: AnpMiniappDockMac.xcscheme
mac-app/AnpMiniappDockMac/Scripts/: build-app-bundle.sh
mac-app/AnpMiniappDockMac/Sources/AnpMiniappDockMac/: AnpMiniappDockMacApp.swift  ContentView.swift  DemoPipelineRunner.swift  PipelineSnapshot.swift  PipelineViewModel.swift  ProcessRunner.swift  RepoLocator.swift
