[package]
name = "anp-adapter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anp.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wx-compat = { path = "../wx-compat" }
