[package]
name = "demo-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true, features = ["http1", "query"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net"] }
