[package]
name = "demo-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anp.workspace = true
anp-adapter = { path = "../anp-adapter" }
axum = { workspace = true, features = ["http1", "query"] }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net"] }
