[package]
name = "dock-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
consent-audit = { path = "../consent-audit" }
mcp-schema = { path = "../mcp-schema" }
serde.workspace = true
serde_json.workspace = true
skill-loader = { path = "../skill-loader" }
thiserror.workspace = true
