[package]
name = "js-runtime-quickjs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anp.workspace = true
anp-adapter = { path = "../anp-adapter" }
dock-core = { path = "../dock-core" }
mcp-schema = { path = "../mcp-schema" }
rquickjs.workspace = true
serde.workspace = true
serde_json.workspace = true
skill-loader = { path = "../skill-loader" }
thiserror.workspace = true
